--- a/app/views/admin/news/_form.html.erb
+++ b/app/views/admin/news/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for([:admin, @news]) do |f| %>
+<%= simple_form_for([:admin, news]) do |f| %>
   <%= f.input :title %>
   <%= f.input :content %>
   <%= f.input :content, as: :pagedown,
