--- a/app/views/admin/news/new.html.erb
+++ b/app/views/admin/news/new.html.erb
@@ -1,9 +1,12 @@
-<div class="col-md-8 col-md-offset-2 col-sm-12 reg-page">
-  <div class="headline">
-    <h1><%= t('news.new') %></h1>
-  </div>
-  <%= render 'form'%>
-  <hr>
-  <%= link_to(t(:index_attr, attr: models_name(News)),
-              admin_news_index_path(@news), class: 'btn secondary') %>
+<div class="headline">
+  <h1><%= t('.title') %></h1>
+</div>
+
+<div class="col-md-2 col-sm-12">
+  <%= link_to(t('.all_news'),
+              admin_news_index_path, class: 'btn secondary') %>
+</div>
+
+<div class="col-md-10 col-sm-12">
+  <%= render 'form', news: @news %>
 </div>
