--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -3,30 +3,38 @@
   <h1><%= t('user.admin_index') %></h1>
 </div>
 
-<div class="col-md-2 col-sm-12 user margin-bottom-20">
-  <button class="wg-external-submit-button btn primary" data-grid-name="grid">
-    <%= t('wice_grid.filter') %>
-  </button>
-
-  <button class="wg-external-reset-button btn secondary" data-grid-name="grid">
-    <%= t('wice_grid.reset_filter') %>
-  </button>
+<div class="col-md-2 col-sm-12">
+  <%= link_to(t('.all'), admin_users_path(all: true),
+                         class: 'btn primary') %>
+  <%= link_to(t('.paginated'), admin_users_path,
+                               class: 'btn secondary') %>
 </div>
 
 <div class="col-md-10 col-sm-12 user">
-  <%= grid(@users_grid, hide_submit_button: true, hide_reset_button: true) do |g|
-    g.column(name: User.human_attribute_name(:name), attribute: 'firstname') do |user|
-      link_to(admin_print_user(user), edit_admin_user_path(user))
-    end
-    g.column(name: User.human_attribute_name(:role),
-             attribute: 'role', filter: false) do |user|
-      user_role(user.role)
-    end
-    g.column(name: User.human_attribute_name(:email), attribute: 'email')
-    g.column(name: User.human_attribute_name(:confirmed_at), attribute: 'confirmed_at',
-             filter: false)
-    g.column(name: t(:show), filter: false) do |user|
-      link_to(t('user.vote.show'), admin_vote_user_path(user))
-    end
-  end -%>
+  <%= paginate(@users) %>
+  <table class="table table-striped table-bordered">
+    <thead>
+      <tr>
+        <th><%= User.human_attribute_name(:name) %></th>
+        <th><%= User.human_attribute_name(:role) %></th>
+        <th><%= User.human_attribute_name(:email) %></th>
+        <th><%= User.human_attribute_name(:confirmed_at) %></th>
+        <th><%= t('.show_vote_user') %></th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @users.each do |user| %>
+        <tr>
+          <td>
+            <%= link_to(admin_print_user(user), edit_admin_user_path(user)) %>
+          </td>
+          <td><%= user_role(user.role) %></td>
+          <td><%= user.email %></td>
+          <td><%= l(user.confirmed_at) if user.confirmed_at.present? %></td>
+          <td><%= link_to(t(:show), admin_vote_user_path(user)) %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+  <%= paginate(@users) %>
 </div>
