--- a/app/views/admin/vote_users/index.html.erb
+++ b/app/views/admin/vote_users/index.html.erb
@@ -1,21 +1,21 @@
 <div class="headline">
-  <h1><%= t('vote_user.administrate') %></h1>
+  <h1><%= t('.title') %></h1>
 </div>
 
 <div class="col-md-12">
-  <%= link_to t('vote_user.attendance_list'), attendance_list_admin_vote_users_path,
+  <%= link_to t('.attendance_list'), admin_attendance_list_path,
               class: 'btn primary' %>
-  <%= link_to t('adjustment.index'), admin_adjustments_path,
+  <%= link_to t('.quick_adjustments'), admin_adjustments_path,
               class: 'btn primary' %>
   <% if can? :manage, Vote %>
-    <%= link_to t('vote.manage'), admin_votes_path, class: 'btn secondary' %>
+    <%= link_to t('.manage_vote'), admin_votes_path, class: 'btn secondary' %>
   <% end %>
   <% if can? :manage, Agenda %>
-    <%= link_to t('agenda.manage'), admin_agendas_path, class: 'btn secondary' %>
+    <%= link_to t('.manage_agenda'), admin_agendas_path, class: 'btn secondary' %>
   <% end %>
-  <%= link_to(t('vote_user.make_all_not_present'), all_not_present_admin_vote_users_path,
+  <%= link_to(t('.make_all_not_present'), all_not_present_admin_vote_users_path,
               method: :patch, class: 'btn secondary',
-              data: {confirm: t('vote_user.confirm_all_not_present')}) %>
+              data: {confirm: t('.confirm_all_not_present')}) %>
   <hr>
 </div>
 
@@ -24,27 +24,33 @@
 </div>
 
 <div class="col-md-12">
-  <%= grid(@vote_users_grid, class: 'admin-grid') do |grid|
-    grid.row_attributes do |user|
-      {id: dom_id(user), class: user.presence ? 'highlight' : 'no-highlight'}
-    end
-    grid.column name: t('attributes.name'), attribute: 'firstname', html: {class: 'name'} do |user|
-      link_to admin_print_user(user), admin_vote_user_path(user)
-    end
-    grid.column name: User.human_attribute_name(:presence), attribute: 'presence', 
-                html: {class: 'presence'} do |user|
-      yes_no(user.presence)
-    end
-    grid.column name: t('vote_user.change_state'), html: {class: 'adjust'} do |user|
-      vote_user_state_link(user)
-    end
-    grid.column name: t('vote_user.reset_votecode'), attribute: 'votecode',
-                html: {class: 'votecode-reset'} do |user|
-      link_to t('vote_user.reset'), new_votecode_admin_vote_user_path(user),
-                method: :patch, remote: true,  data: {confirm: t('vote_user.confirm_reset')}
-    end
-  end -%>
-
+  <%= paginate(@vote_users) %>
+  <table class="table table-striped table-bordered admin-grid">
+    <thead>
+      <tr>
+        <th><%= User.human_attribute_name(:name) %></th>
+        <th><%= User.human_attribute_name(:presence) %></th>
+        <th><%= t('.change_state') %></th>
+        <th><%= t('.reset_votecode') %></th>
+      </tr>
+      <tbody>
+        <% @vote_users.each do |user| %>
+          <tr id="<%= dom_id(user) %>" class="<%= user.presence ? 'highlight' : 'no-highlight' %>">
+            <td> <%= link_to admin_print_user(user), admin_vote_user_path(user) %></td>
+            <td> <%= yes_no(user.presence) %></td>
+            <td class="adjust"> <%= vote_user_state_link(user) %></td>
+            <td class="votecode-reset">
+              <%= link_to(t('.reset'),
+                          new_votecode_admin_vote_user_path(user),
+                          method: :patch, remote: true,
+                          data: { confirm: t('.confirm_reset') }) %>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </thead>
+  </table>
+  <%= paginate(@vote_users) %>
   <hr>
   <%= render '/admin/adjustments/info' %>
 </div>
