--- a/app/views/admin/adjustments/_info.html.erb
+++ b/app/views/admin/adjustments/_info.html.erb
@@ -1,14 +1,14 @@
 <div>
-  <p><b><%= t('adjustment.info.symbols') %></b>
+  <p><b><%= t('.symbols') %></b>
   <ul class="list">
-    <li><%= fa_icon('credit-card') %> <%= t('adjustment.info.card') %></li>
-    <li><%= fa_icon('key') %> <%= t('adjustment.info.key') %></li>
-    <li><%= fa_icon('times') %> <%= t('adjustment.info.times') %></li>
+    <li><%= fa_icon('credit-card') %> <%= t('.card') %></li>
+    <li><%= fa_icon('key') %> <%= t('.key') %></li>
+    <li><%= fa_icon('times') %> <%= t('.confirmed') %></li>
   </ul>
-  <%= markdown(t('adjustment.info.observe')) %>
+  <%= markdown(t('.observe')) %>
   <ul class="list">
-    <li><%= t('adjustment.info.obs1') %></li>
-    <li><%= t('adjustment.info.obs2') %></li>
-    <li><%= t('adjustment.info.obs3') %></li>
+    <li><%= t('.obs1') %></li>
+    <li><%= t('.obs2') %></li>
+    <li><%= t('.obs3') %></li>
   </ul>
 </div>
