--- a/app/views/admin/votes/index.html.erb
+++ b/app/views/admin/votes/index.html.erb
@@ -1,15 +1,15 @@
 <% provide(:title, t('vote.admin_votes')) %>
 <div class="headline">
-  <h1><%= t('vote.admin_votes') %></h1>
+  <h1><%= t('.title') %></h1>
 </div>
 
 <div class="col-md-12">
-  <%= link_to t('vote.new_vote'), new_admin_vote_path, class: 'btn primary' %>
+  <%= link_to t('.new_vote'), new_admin_vote_path, class: 'btn primary' %>
   <% if can_administrate? :manage, User %>
-    <%= link_to t('vote_user.manage'), admin_vote_users_path, class: 'btn secondary' %>
+    <%= link_to t('.manage_vote_users'), admin_vote_users_path, class: 'btn secondary' %>
   <% end %>
   <% if can_administrate? :manage, Agenda %>
-    <%= link_to t('agenda.manage'), admin_agendas_path, class: 'btn secondary' %>
+    <%= link_to t('.manage_agenda'), admin_agendas_path, class: 'btn secondary' %>
   <% end %>
   <hr>
 </div>
@@ -19,30 +19,36 @@
 </div>
 
 <div class="col-md-12">
-  <%= grid(@votes_grid, class: 'admin-grid') do |grid|
-    grid.row_attributes do |v|
-      {class: v.open? ? 'highlight' : 'no-highlight'}
-    end
-    grid.column name: t('attributes.name'), attribute: 'title' do |v|
-      link_to v.title, admin_vote_path(v)
-    end
-    grid.column name: model_name(Agenda), assoc: :agenda, attribute: 'sort_index' do |v|
-      if v.agenda.present?
-        link_to(v.agenda, edit_admin_agenda_path(v.agenda))
-      end
-    end
-    grid.column name: t('vote.status'), attribute: 'status' do |v|
-      vote_status_str(v.status)
-    end
-    grid.column name: t('vote.open_close') do |v|
-      vote_state_link(v)
-    end
-    grid.column name: t('edit') do |v|
-      link_to t('edit'), edit_admin_vote_path(v)
-    end
-    grid.column name: t('remove') do |v|
-      link_to(t('remove'), admin_vote_path(v), method: :delete, data:
-              { confirm: t('vote.confirm_remove') + v.title + '?'} )
-    end
-  end -%>
+  <table class="table table-striped table-bordered admin-grid">
+    <thead>
+      <tr>
+        <th><%= Vote.human_attribute_name(:title) %></th>
+        <th><%= model_name(Agenda) %></th>
+        <th><%= Vote.human_attribute_name(:status) %></th>
+        <th><%= t('.open_close') %></th>
+        <th><%= t(:edit) %></th>
+        <th><%= t(:remove) %></th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @votes.each do |vote| %>
+        <tr class="<%= vote.open? ? 'highlight' : 'no-highlight' %>">
+          <td><%= link_to(vote.title, admin_vote_path(vote)) %></td>
+          <td>
+            <%= if vote.agenda.present?
+              link_to("$#{vote.agenda.order}", edit_admin_agenda_path(vote.agenda))
+            end %>
+          </td>
+          <td><%= vote_status_str(vote.status) %></td>
+          <td><%= vote_state_link(vote) %></td>
+          <td><%= link_to(t(:edit), edit_admin_vote_path(vote)) %></td>
+          <td>
+            <%= link_to(t(:remove), admin_vote_path(vote), method: :delete,
+                        data: { confirm: t('.confirm_remove',
+                                           title: vote.title) }) %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 </div>
