Votes: move refresh to index
- Use new redirect_back in controller

--- a/app/views/admin/votes/_status.html.erb
+++ b/app/views/admin/votes/_status.html.erb
@@ -18,7 +18,7 @@
 
   <div class="col-md-4 col-sm-12">
     <span class="refresh">
-      <%= link_to(refresh_admin_votes_path, remote: true, method: :post) do %>
+      <%= link_to(admin_votes_path, remote: true) do %>
         <%= fa_icon('refresh') %>
       <% end %>
     </span>
