--- a/app/views/admin/agendas/index.html.erb
+++ b/app/views/admin/agendas/index.html.erb
@@ -12,7 +12,7 @@
 </div>
 <div class="col-md-12">
   <%= paginate(@agendas) %>
-  <table class="table table-striped table-bordered">
+  <table class="table table-striped table-bordered admin-grid">
     <thead>
       <tr>
         <th><%= Agenda.human_attribute_name(:index) %></th>
@@ -26,8 +26,8 @@
         <tr id="<%= dom_id(agenda) %>"
             class="<%= agenda.current? ? 'highlight' : 'no-highlight' %>">
           <td><%= link_to(agenda, edit_admin_agenda_path(agenda))%></td>
-          <td><%= agenda_status_str(agenda.status) %></td>
-          <td><%= agenda_state_link(agenda) %></td>
+          <td class="status"><%= agenda_status_str(agenda.status) %></td>
+          <td class="state"><%= agenda_state_link(agenda) %></td>
           <td>
             <%= link_to(t(:remove), admin_agenda_path(agenda),
                         method: :delete,
