--- a/app/views/layouts/email.html.erb
+++ b/app/views/layouts/email.html.erb
@@ -32,6 +32,8 @@
 
           <%= render 'layouts/email/top_block' %>
 
+          <%= yield %>
+
           <%= render 'layouts/email/footer' %>
 
 
