Styles: change css use in views

--- a/app/views/admin/votes/new.html.erb
+++ b/app/views/admin/votes/new.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, t('vote.admin_votes')) %>
 <div class="col-md-6 col-md-offset-3 col-sm-12 reg-page">
   <div class="headline">
-    <h1><%= t('vote.new_vote') %></h1>
+    <h1><%= t('.title') %></h1>
   </div>
   <%= render 'form' %>
 </div>
