--- a/app/views/layouts/_copyright.html.erb
+++ b/app/views/layouts/_copyright.html.erb
@@ -1,4 +1,4 @@
-<div class="row copyright">
+<footer class="footer copyright">
   <p>
     <%= t('footer.developed_at') %>
     <%= link_to('https://fsektionen.se') do %>
@@ -11,7 +11,6 @@
     &nbsp;|&nbsp;&nbsp;
     <%= Time.current.year %>
     &copy;
-    <%= link_to('Röstsystem.se', 'http://rostsystem.se') %>
+    <%= link_to('Röstsystem.se', 'https://rostsystem.se') %>
   </p>
-</div>
-
+</footer>
