--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
     <%= render 'layouts/favicon' %>
   </head>
 
-  <body>
+  <body class="site">
 
     <span class="cookies">
       <%= render 'cookies_eu/consent_banner', link: cookies_path %>
