--- a/app/views/admin/votes/_form.html.erb
+++ b/app/views/admin/votes/_form.html.erb
@@ -2,7 +2,7 @@
   <%= f.input :title %>
   <%= f.association :agenda, collection: Agenda.by_index, label_method: :to_s  %>
   <%= f.input :choices, as: :integer, input_html: { min: '1'} %>
-  <div class="panel panel-default">
+  <div class="panel">
     <div class="panel-heading"><%= t('vote.options') %></div>
     <div id="vote_options">
       <%= f.simple_fields_for :vote_options do |v| %>
