--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="col-md-8 col-md-offset-2 col-xs-12">
-  <div class="profile-body margin-bottom-20 user">
-    <div class="tab-v1">
+  <div class="margin-bottom-20 user">
+    <div class="tab">
       <ul class="nav nav-justified nav-tabs">
         <li class="<%=@tab == :profile ? 'active' : ''%>">
           <%= link_to(t('user.profile'), '#profile', data: { toggle: :tab }) %>
@@ -18,15 +18,15 @@
       </ul>
 
       <div class="tab-content">
-        <div id="profile" class="profile-edit tab-pane fade in <%= @tab == :profile ? 'active' : '' %>">
+        <div id="profile" class="tab-pane fade in <%= @tab == :profile ? 'active' : '' %>">
           <%= render 'form', user: current_user %>
         </div>
 
-        <div id="account" class="profile-edit tab-pane fade in <%= @tab == :account ? 'active' : '' %>">
+        <div id="account" class="tab-pane fade in <%= @tab == :account ? 'active' : '' %>">
           <%= render 'account_form', user: current_user %>
         </div>
 
-        <div id="password" class="profile-edit tab-pane fade in <%= @tab == :password ? 'active' : '' %>">
+        <div id="password" class="tab-pane fade in <%= @tab == :password ? 'active' : '' %>">
           <%= render 'password_form', user: current_user %>
         </div>
 
