--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,11 +20,18 @@
 @import 'cookies_eu';
 @import 'pagedown_bootstrap';
 
-html {
-  min-height: 100%;
-  position: relative;
+.site {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.content {
+  flex: 1;
 }
 
 body {
-  padding-bottom: 200px;
+  color: $footer-gray;
+  font-size: 14px;
+  line-height: 1.6;
 }
