--- a/app/assets/stylesheets/partials/_copyright.scss
+++ b/app/assets/stylesheets/partials/_copyright.scss
@@ -1,6 +1,6 @@
 .copyright {
-  margin: 0;
-  padding: 0;
+  background: $footer-gray;
+  padding: .5rem 0 0;
   text-align: center;
   vertical-align: middle;
 
