--- a/app/views/layouts/_copyright.html.erb
+++ b/app/views/layouts/_copyright.html.erb
@@ -1,6 +1,6 @@
 <footer class="footer copyright">
   <p>
-    <%= t('footer.developed_at') %>
+    <%= t('.developed_at') %>
     <%= link_to('https://fsektionen.se') do %>
       <%= image_tag('layout/small_f.png') %>
     <% end %>
