--- a/app/views/layouts/email/_footer.html.erb
+++ b/app/views/layouts/email/_footer.html.erb
@@ -4,7 +4,7 @@
       <table width="700"  border="0" cellpadding="0" cellspacing="0" align="center" class="deviceWidth">
         <tr>
           <td class="center" style="font-size: 12px; color: #687074; font-weight: bold; text-align: center; font-family: Arial, Helvetica, sans-serif; line-height: 20px; vertical-align: middle; padding: 30px 10px 0px; " >
-            <%= t('email.footer') %>
+            <%= t('.why_email') %>
           </td>
         </tr>
         <tr>
@@ -16,4 +16,3 @@
     </td>
   </tr>
 </table>
-
