--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,12 +1,14 @@
-<div class="col-md-6 col-sm-12">
-  <%= render '/users/confirm_information' %>
-  <% cache('agenda_startpage', skip_digest: true) do %>
-    <%= render '/agendas/start_page', agendas: @start_page.agendas %>
-  <% end %>
-</div>
+<div class="row">
+  <div class="col-sm">
+    <%= render '/users/confirm_information' %>
+    <% cache('agenda_startpage', skip_digest: true) do %>
+      <%= render '/agendas/start_page', agendas: @start_page.agendas %>
+    <% end %>
+  </div>
 
-<div class="col-md-6 col-sm-12">
-  <% if @start_page.news.present? %>
-    <%= render @start_page.news %>
-  <% end %>
+  <div class="col-sm">
+    <% if @start_page.news.present? %>
+      <%= render @start_page.news %>
+    <% end %>
+  </div>
 </div>
