--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,17 +1,16 @@
+@import 'colors';
 // Importing Bootstrap
-@import 'bootstrap-sprockets';
 @import 'bootstrap';
 
 // Include colors and mixins
-@import 'colors';
 @import 'lth';
 @import 'mixins';
 @import 'fonts';
 @import 'media-queries';
 
 // Include partials
-@import 'partials/*';
-@import 'style/*';
+// @import 'partials/*';
+// @import 'style/*';
 
 // Include gems
 @import 'font-awesome';
@@ -34,4 +33,5 @@ body {
   color: $footer-gray;
   font-size: 14px;
   line-height: 1.6;
+  padding-top: 5rem;
 }
