--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -5,10 +5,19 @@
   </h1>
 </div>
 
+<div class="alert alert-danger fade-in" style="display: none;" id="item-status"></div>
+
 <div class="col-md-2 col-sm-12">
   <%= link_to(t('.all_items'), admin_items_path, class: 'btn secondary') %>
   <%= link_to(t('.destroy'), admin_item_path(@item), method: :delete,
                                                       class: 'btn danger') %>
+
+  <% if @item.single? && @item.sub_items.any? %>
+    <hr />
+    <div id="<%= dom_id(@item.sub_items.first) %>">
+      <%= current_item_button(@item.sub_items.first) %>
+    </div>
+  <% end %>
 </div>
 
 <div class="col-md-10 col-sm-12">
@@ -33,30 +42,6 @@
   </div>
 
   <div class="col-md-10 col-sm-12">
-    <table class="table table-striped table-bordered admin-grid">
-      <thead>
-        <tr>
-          <th><%= Item.human_attribute_name(:title) %></th>
-          <th><%= t(:remove) %></th>
-        </tr>
-      </thead>
-      <tbody>
-        <% @item.sub_items.each do |sub_item| %>
-          <tr id="<%= dom_id(sub_item) %>"
-              class="<%= sub_item.current? ? 'highlight' : 'no-highlight' %>">
-            <td>
-              <%= link_to(sub_item,
-                            edit_admin_item_sub_item_path(@item, sub_item)) %>
-            </td>
-            <td>
-              <%= link_to(t(:remove), admin_item_sub_item_path(@item, sub_item),
-                          method: :delete,
-                          data: { confirm: t('.confirm_remove_sub_item',
-                                             title: sub_item.title) }) %>
-            </td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
+    <%= render('/admin/sub_items/table', item: @item) %>
   </div>
 <% end %>
