--- a/app/assets/stylesheets/colors.scss.erb
+++ b/app/assets/stylesheets/colors.scss.erb
@@ -5,13 +5,17 @@ $main-color: <%= Settings.css.main_color %>;
 $main-color-hover: <%= Settings.css.hover_color %>;
 $highlight-color: <%= Settings.css.highlight_color %>;
 
-$fsek-orange: #eb7125;
-$fsek-orange-hover: #eb7125;
-$fsek-nano-green: #4e9d2d;
-$fsek-pi-silver: #bebebe;
 
 $black: #000;
 $white: #fff;
+$grey: #555;
+$green: #4e9d2d;
+$red: #e74c3c;
+$silver: #bebebe;
+
+$grey-hover: #333;
+$red-hover: #c0392b;
+
 $gray-text: #777;
 $gray-headline: #555;
 $light-gray-text: #eee;
