--- a/app/assets/stylesheets/partials/_agendas.scss
+++ b/app/assets/stylesheets/partials/_agendas.scss
@@ -1,5 +1,6 @@
 .agenda {
   .badge {
+    color: $white;
     font-size: 14px;
   }
 
@@ -17,7 +18,7 @@
     }
 
     .badge {
-      background: $unify-green;
+      background: $green;
     }
   }
 
