--- a/app/assets/stylesheets/partials/_votes.scss
+++ b/app/assets/stylesheets/partials/_votes.scss
@@ -55,7 +55,7 @@
     font-size: 20px;
 
     i {
-      color: $unify-red;
+      color: $red;
       font-size: 26px;
     }
   }
@@ -64,7 +64,7 @@
     font-size: 20px;
 
     i {
-      color: $unify-green;
+      color: $green;
       font-size: 26px;
     }
   }
