--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,5 +1,5 @@
 <%= provide(:title, @user.to_s) %>
-<div class="col-md-8 col-md-offset-2 col-sm-12 reg-page">
+<div class="col-md-8 offset-md-2 col-sm-12 reg-page">
   <div class="headline">
     <h1><%= "#{t(:edit)} - #{@user.to_s}" %></h1>
   </div>
