--- a/app/views/admin/votes/show.html.erb
+++ b/app/views/admin/votes/show.html.erb
@@ -6,6 +6,7 @@
   </h1>
 </div>
 
+<div class="row">
 <div class="col-md-2 col-sm-12 vote margin">
   <span class="choices">
     <span class="title">
@@ -109,4 +110,5 @@
   </div>
 
   <%= render '/admin/audits/log', primary: Vote, secondary: User, audits: @audits %>
+</div>
 </div>
