--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,4 +1,4 @@
-<div class="col-md-8 col-md-offset-2 col-xs-12 reg-page">
+<div class="col-md-8 offset-md-2 col-xs-12 reg-page">
   <div class="headline">
     <h2><%= t('devise.passwords.reset') %></h2>
   </div>
