--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -3,7 +3,7 @@
   <h1><%= t('about.title') %></h1>
 </div>
 
-<div class="col-md-8 col-md-offset-2 col-sm-12">
+<div class="col-md-8 offset-md-2 col-sm-12">
   <h3><%= t('about.what_is.title') %></h3>
   <%= simple_format(t('about.what_is.text')) %>
 
