--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="col-md-8 col-md-offset-2 col-xs-12">
+<div class="col-md-8 offset-md-2 col-xs-12">
   <div class="margin-bottom-20 user">
     <div class="tab">
       <ul class="nav nav-justified nav-tabs">
