--- a/app/assets/stylesheets/partials/_start_page.scss
+++ b/app/assets/stylesheets/partials/_start_page.scss
@@ -33,7 +33,7 @@
   }
 
   h1 {
-    background: rgba($fsek-pi-silver, 0.25);
+    background: rgba($silver, 0.25);
     color: $white;
     display: inline-block;
     padding: 5px;
