--- a/app/assets/stylesheets/style/navbar.scss
+++ b/app/assets/stylesheets/style/navbar.scss
@@ -1,38 +1,4 @@
-.navbar {
-  margin: 0;
-  min-height: inherit;
-
-  .nav {
-    .fa.fa-angle-down {
-      font-size: 12px;
-      left: 1px;
-      margin: 0;
-      position: relative;
-      top: -1px;
-    }
-
-    .open {
-      .fa.fa-angle-down {
-        @include transform(rotate(180deg));
-      }
-    }
-  }
-}
-
-.navbar-brand {
-  height: auto;
-  left: 5px;
-}
-
-.navbar-brand-text {
-  color: $gray-headline;
-  font-size: 15px;
-  line-height: 17px;
-  overflow: visible;
-  padding: 2px 0 0 35px;
-
-  span {
-    margin-left: -25px;
-    position: absolute;
-  }
+.dropdown-item.active,
+.dropdown-item:active {
+  background-color: $main-color;
 }
