--- a/app/views/admin/agendas/new.html.erb
+++ b/app/views/admin/agendas/new.html.erb
@@ -1,4 +1,4 @@
-<div class="col-md-6 col-md-offset-3 col-sm-12 reg-page">
+<div class="col-md-6 offset-md-3 col-sm-12 reg-page">
   <div class="headline">
     <h1><%= t('agenda.new') %></h1>
   </div>
