--- a/app/views/admin/documents/edit.html.erb
+++ b/app/views/admin/documents/edit.html.erb
@@ -1,5 +1,5 @@
 <%= provide(:title, t('document.edit')) %>
-<div class="col-md-6 col-md-offset-3 col-sm-12 reg-page">
+<div class="col-md-6 offset-md-3 col-sm-12 reg-page">
   <div class="headline">
     <h1><%= t('document.edit') %></h1>
   </div>
