--- a/app/views/admin/documents/new.html.erb
+++ b/app/views/admin/documents/new.html.erb
@@ -1,5 +1,5 @@
 <%= provide(:title, t('document.new')) %>
-<div class="col-md-8 col-md-offset-2 col-sm-12 reg-page">
+<div class="col-md-8 offset-md-2 col-sm-12 reg-page">
   <div class="headline">
     <h1><%= t('document.new') %></h1>
   </div>
