--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -3,38 +3,40 @@
   <h1><%= t('user.admin_index') %></h1>
 </div>
 
-<div class="col-md-2 col-sm-12">
-  <%= link_to(t('.all'), admin_users_path(all: true),
-                         class: 'btn primary') %>
-  <%= link_to(t('.paginated'), admin_users_path,
-                               class: 'btn secondary') %>
-</div>
+<div class="row">
+  <div class="col-md-2 col-sm-12">
+    <%= link_to(t('.all'), admin_users_path(all: true),
+                           class: 'btn primary') %>
+    <%= link_to(t('.paginated'), admin_users_path,
+                                 class: 'btn secondary') %>
+  </div>
 
-<div class="col-md-10 col-sm-12 user">
-  <%= paginate(@users) %>
-  <table class="table table-striped table-bordered">
-    <thead>
-      <tr>
-        <th><%= User.human_attribute_name(:name) %></th>
-        <th><%= User.human_attribute_name(:role) %></th>
-        <th><%= User.human_attribute_name(:email) %></th>
-        <th><%= User.human_attribute_name(:confirmed_at) %></th>
-        <th><%= t('.show_vote_user') %></th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @users.each do |user| %>
+  <div class="col-md-10 col-sm-12 user">
+    <%= paginate(@users) %>
+    <table class="table table-striped table-bordered">
+      <thead>
         <tr>
-          <td>
-            <%= link_to(admin_print_user(user), edit_admin_user_path(user)) %>
-          </td>
-          <td><%= user_role(user.role) %></td>
-          <td><%= user.email %></td>
-          <td><%= l(user.confirmed_at) if user.confirmed_at.present? %></td>
-          <td><%= link_to(t(:show), admin_vote_user_path(user)) %></td>
+          <th><%= User.human_attribute_name(:name) %></th>
+          <th><%= User.human_attribute_name(:role) %></th>
+          <th><%= User.human_attribute_name(:email) %></th>
+          <th><%= User.human_attribute_name(:confirmed_at) %></th>
+          <th><%= t('.show_vote_user') %></th>
         </tr>
-      <% end %>
-    </tbody>
-  </table>
-  <%= paginate(@users) %>
+      </thead>
+      <tbody>
+        <% @users.each do |user| %>
+          <tr>
+            <td>
+              <%= link_to(admin_print_user(user), edit_admin_user_path(user)) %>
+            </td>
+            <td><%= user_role(user.role) %></td>
+            <td><%= user.email %></td>
+            <td><%= l(user.confirmed_at) if user.confirmed_at.present? %></td>
+            <td><%= link_to(t(:show), admin_vote_user_path(user)) %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+    <%= paginate(@users) %>
+  </div>
 </div>
