--- a/app/views/admin/vote_users/show.html.erb
+++ b/app/views/admin/vote_users/show.html.erb
@@ -1,4 +1,4 @@
-<div class="col-md-10 col-md-offset-1 col-sm-12 reg-page">
+<div class="col-md-10 offset-md-1 col-sm-12 reg-page">
   <div class="headline">
     <h1><%= model_name(User) %></h1>
   </div>
