--- a/app/views/admin/votes/edit.html.erb
+++ b/app/views/admin/votes/edit.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, t('vote.admin_votes')) %>
-<div class="col-md-6 col-md-offset-3 col-sm-12 reg-page">
+<div class="col-md-6 offset-md-3 col-sm-12 reg-page">
   <div class="headline">
     <h1><%= t('vote.edit_vote') %></h1>
   </div>
