--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -3,7 +3,7 @@
   <h1 id='contacts_title'><%= t('.title') %></h1>
 </div>
 
-<div class="col-md-6 col-md-offset-3 col-sm-12">
+<div class="col-md-6 offset-md-3 col-sm-12">
   <%= simple_format(t('.description')) %>
 
   <%= simple_form_for(@message,
