--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="col-md-6 col-md-offset-3 col-xs-12 reg-page">
+<div class="col-md-6 offset-md-3 col-xs-12 reg-page">
   <div class="headline">
     <h2><%= t('devise.confirmations.instructions') %></h2>
   </div>
