--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="col-md-8 col-md-offset-2 col-xs-12 reg-page">
+<div class="col-md-8 offset-md-2 col-xs-12 reg-page">
   <div class="headline">
     <h2 class="password"><%= t('devise.passwords.change') %></h2>
   </div>
