--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,48 +1,22 @@
-<div class="collapse navbar-collapse navbar-responsive-collapse">
-  <ul class="nav navbar-nav navbar-right">
-    <% if current_user.present? && !current_user.user? %>
-      <li class="dropdown">
-        <%= menu_dropdown_link(t('.administrate')) %>
-        <ul class="dropdown-menu">
-          <% if can_administrate? :modify, Vote %>
-            <li>
-              <%= link_to models_name(Vote), admin_votes_path %>
-            </li>
-          <% end %>
-          <% if can_administrate? :modify, :vote_user %>
-            <li>
-              <%= link_to t('user.vote_administration'), admin_vote_users_path %>
-            </li>
-          <% end %>
-          <% if can_administrate? :modify, Agenda %>
-            <li>
-              <%= link_to t('agenda.name'), admin_agendas_path %>
-            </li>
-          <% end %>
-          <% if can_administrate? :modify, Document %>
-            <li>
-              <%= link_to models_name(Document), admin_documents_path %>
-            </li>
-          <% end %>
-        </ul>
-      </li>
-    <% end %>
+<ul class="navbar-nav mr-auto">
+  <% if current_user.present? && !current_user.user? %>
+    <%= render 'layouts/admin_dropdown' %>
+  <% end %>
 
-    <li class="dropdown">
-      <%= menu_dropdown_link(t('.info')) %>
-      <ul class="dropdown-menu">
-        <li><%= link_to(t('.about'), about_path) %></li>
-        <li><%= link_to(t('.contact'), contacts_path) %></li>
-        <li><%= link_to(t('.documents'), documents_path) %></li>
-        <li><%= link_to(t('.agenda'), agendas_path) %></li>
-        <li><%= link_to(t('.terms'), terms_path) %></li>
-      </ul>
-    </li>
-    <li class="dropdown">
-      <%= menu_dropdown_link(t('.voting')) %>
-      <ul class="dropdown-menu">
-        <li><%= link_to(t('.votes'), votes_path) %></li>
-      </ul>
-    </li>
-  </ul>
-</div>
+  <li class="nav-item dropdown">
+    <%= menu_dropdown_link(t('.info')) %>
+    <ul class="dropdown-menu" aria-labelledby="dropdown-info">
+      <li><%= link_to(t('.about'), about_path, class: 'dropdown-item') %></li>
+      <li><%= link_to(t('.contact'), contacts_path, class: 'dropdown-item') %></li>
+      <li><%= link_to(t('.documents'), documents_path, class: 'dropdown-item') %></li>
+      <li><%= link_to(t('.agenda'), agendas_path, class: 'dropdown-item') %></li>
+      <li><%= link_to(t('.terms'), terms_path, class: 'dropdown-item') %></li>
+    </ul>
+  </li>
+  <li class="nav-item dropdown">
+    <%= menu_dropdown_link(t('.voting')) %>
+    <ul class="dropdown-menu" aria-labelledby="dropdown-info">
+      <li><%= link_to(t('.votes'), votes_path, class: 'dropdown-item') %></li>
+    </ul>
+  </li>
+</ul>
