--- a/app/views/static_pages/terms.html.erb
+++ b/app/views/static_pages/terms.html.erb
@@ -3,7 +3,7 @@
   <h1><%= t('terms.title') %></h1>
 </div>
 
-<div class="col-md-8 col-md-offset-2 col-sm-12 terms">
+<div class="col-md-8 offset-md-2 col-sm-12 terms">
   <h2><%= t('terms.general.title') %></h2>
   <%= simple_format(t('terms.general.text')) %>
 
