--- a/app/views/vote_posts/new.html.erb
+++ b/app/views/vote_posts/new.html.erb
@@ -1,4 +1,4 @@
-<div class="col-md-6 col-md-offset-3 col-sm-12 reg-page form">
+<div class="col-md-6 offset-md-3 col-sm-12 reg-page form">
   <div class="headline">
     <h1><%= t('vote.show_title') %></h1>
   </div>
