--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,37 +1,39 @@
 <div class="col-md-8 offset-md-2 col-xs-12">
   <div class="margin-bottom-20 user">
-    <div class="tab">
-      <ul class="nav nav-justified nav-tabs">
-        <li class="<%=@tab == :profile ? 'active' : ''%>">
-          <%= link_to(t('user.profile'), '#profile', data: { toggle: :tab }) %>
-        </li>
+    <nav>
+      <div class="nav nav-tabs" id="nav-tab" role="tablist">
+        <%= link_to(t('user.profile'),
+                    '#profile',
+                    data: { toggle: :tab },
+                    class: "nav-item nav-link #{@tab == :profile ? 'active' : ''}") %>
 
-        <li class="<%=@tab == :account ? 'active' : ''%>">
-          <%= link_to('#account', data: { toggle: :tab }) do %>
-            <%= t('user.account') %>
-          <% end %>
-        </li>
+        <%= link_to(t('user.account'),
+                    '#account',
+                    data: { toggle: :tab },
+                    class: "nav-item nav-link #{@tab == :account ? 'active' : ''}") %>
 
-        <li class="<%=@tab == :password ? 'active' : ''%>">
-          <%= link_to(t('user.password'), '#password', data: { toggle: :tab }) %>
-        </li>
-      </ul>
-
-      <div class="tab-content">
-        <div id="profile" class="tab-pane fade in <%= @tab == :profile ? 'active' : '' %>">
-          <%= render 'form', user: current_user %>
-        </div>
-
-        <div id="account" class="tab-pane fade in <%= @tab == :account ? 'active' : '' %>">
-          <%= render 'account_form', user: current_user %>
-        </div>
-
-        <div id="password" class="tab-pane fade in <%= @tab == :password ? 'active' : '' %>">
-          <%= render 'password_form', user: current_user %>
-        </div>
-
-        <%= link_to t('back_to_root'), :root %>
+        <%= link_to(t('user.profile'),
+                    '#password',
+                    data: { toggle: :tab },
+                    class: "nav-item nav-link #{@tab == :password ? 'active' : ''}") %>
       </div>
+    </nav>
+
+    <div class="tab-content" id="nav-tabContent">
+      <div id="profile" class="tab-pane fade <%= @tab == :profile ? 'active show' : '' %>">
+        <%= render 'form', user: current_user %>
+      </div>
+
+      <div id="account" class="tab-pane fade <%= @tab == :account ? 'active show' : '' %>">
+        <%= render 'account_form', user: current_user %>
+      </div>
+
+      <div id="password" class="tab-pane fade <%= @tab == :password ? 'active show' : '' %>">
+        <%= render 'password_form', user: current_user %>
+      </div>
+
+      <br>
+      <%= link_to t('back_to_root'), :root %>
     </div>
   </div>
 </div>
