--- a/app/views/admin/adjustments/edit.html.erb
+++ b/app/views/admin/adjustments/edit.html.erb
@@ -1,6 +1,16 @@
-<div class="col-md-6 offset-md-3 col-sm-12 reg-page">
-  <div class="headline">
-    <h1><%= t('adjustment.edit') %></h1>
+<div class="headline">
+  <h1><%= t('.title') %></h1>
+</div>
+
+<div class="row">
+  <div class="col-12 col-md-2">
+    <%= link_to(t('.all_adjustments'),
+                admin_vote_users_path, class: 'btn secondary') %>
+    <%= link_to(t('.vote_user'),
+                admin_vote_user_path(@adjustment.user), class: 'btn secondary') %>
   </div>
-  <%= render 'form' %>
+
+  <div class="col-12 col-md-10">
+    <%= render 'form', adjustment: @adjustment %>
+  </div>
 </div>
