--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,13 +1,15 @@
-<div class="headline">
-  <h1>
-    <%= t('.title') %>
-    <small><%= item_multiplicity(@item.multiplicity) %></small>
-  </h1>
+<div class="col-12">
+  <div class="headline">
+    <h1>
+      <%= t('.title') %>
+      <small><%= item_multiplicity(@item.multiplicity) %></small>
+    </h1>
+  </div>
+
+  <div class="alert alert-danger fade-in" style="display: none;" id="item-status"></div>
 </div>
 
-<div class="alert alert-danger fade-in" style="display: none;" id="item-status"></div>
-
-<div class="col-md-2 col-sm-12">
+<div class="col-12 col-md-2">
   <%= link_to(t('.all_items'), admin_items_path, class: 'btn secondary') %>
   <%= link_to(t('.destroy'), admin_item_path(@item), method: :delete,
                                                       class: 'btn danger') %>
@@ -20,28 +22,33 @@
   <% end %>
 </div>
 
-<div class="col-md-10 col-sm-12">
+<div class="col-12 col-md-10">
   <%= render('form', item: @item) %>
 </div>
 
-<div class="headline">
-  <h2><%= t('.sub_items') %></h2>
+<div class="col-12">
+  <div class="headline">
+    <h2><%= t('.sub_items') %></h2>
+  </div>
 </div>
 
-<% if @item.single? %>
-  <%= button_to(t('.allow_multiple'), admin_item_path(@item), method: :patch,
-                params: { item: { multiplicity: :multiple } },
-                class: 'btn primary') %>
-<% elsif @item.multiple? %>
-  <div class="col-md-2 col-sm-12">
+<div class="col-12 col-md-2">
+  <% if @item.single? %>
+    <%= button_to(t('.allow_multiple'), admin_item_path(@item), method: :patch,
+                  params: { item: { multiplicity: :multiple } },
+                  class: 'btn primary') %>
+  <% elsif @item.multiple? %>
     <%= link_to(t('.new_sub_item'), new_admin_item_sub_item_path(@item),
                                     class: 'btn secondary') %>
     <%= button_to(t('.allow_single'), admin_item_path(@item), method: :patch,
                   params: { item: { multiplicity: :single } },
                   class: 'btn secondary') %>
-  </div>
 
-  <div class="col-md-10 col-sm-12">
+  <% end %>
+</div>
+
+<% if @item.multiple? %>
+  <div class="col-12 col-md-10">
     <%= render('/admin/sub_items/table', item: @item) %>
   </div>
 <% end %>
