--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,11 +1,13 @@
-<div class="headline">
-  <h1><%= t('.title') %></h1>
+<div class="col-12">
+  <div class="headline">
+    <h1><%= t('.title') %></h1>
+  </div>
 </div>
 
-<div class="col-md-2 col-sm-12">
+<div class="col-12 col-md-2">
   <%= link_to(t('.all_items'), admin_items_path, class: 'btn secondary') %>
 </div>
 
-<div class="col-md-10 col-sm-12">
+<div class="col-12 col-md-10">
   <%= render('form', item: @item) %>
 </div>
