--- a/app/views/admin/sub_items/new.html.erb
+++ b/app/views/admin/sub_items/new.html.erb
@@ -1,12 +1,14 @@
-<div class="headline">
-  <h1><%= t('.title') %></h1>
+<div class="col-12">
+  <div class="headline">
+    <h1><%= t('.title') %></h1>
+  </div>
 </div>
 
-<div class="col-md-2 col-sm-12">
+<div class="col-12 col-md-2">
   <%= link_to(t('.edit_item'), edit_admin_item_path(@item),
                                class: 'btn secondary') %>
 </div>
 
-<div class="col-md-10 col-sm-12">
+<div class="col-12 col-md-10">
   <%= render('form', item: @item, sub_item: @sub_item) %>
 </div>
