--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,9 @@
     <main role="main" class="container content pb-2">
       <%= yield :pre_content %>
 
-      <%= render 'layouts/content' %>
+      <div class="row">
+        <%= render 'layouts/content' %>
+      </div>
     </main>
 
     <%= render 'layouts/copyright' %>
